# practice

./: .gitignore  README.md  directory.txt
SQLZOO/: select_from_world.sql
audio_recog_py/: Untitled.ipynb  pyproject.toml
audio_recog_py/.virtual_documents/: Untitled.ipynb  Untitled.ipynb.py
eff_python/: Untitled.ipynb  address.txt  eff_python.ipynb  eff_python02.ipynb  my_file.txt  my_numbers.txt  pyproject.toml
eff_python/.virtual_documents/: Untitled.ipynb.py  eff_python.ipynb.py  eff_python02.ipynb.py
eff_python/bashfile_for_settings/: create_python_env.sh
fast_api/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
fast_api/practice/: intro.py
fast_api/practice/tests/: test_intro.py
fast_api/todo/: README.md  controllers.py  create_table.py  db.py  db.sqlite3  models.py  mycalendar.py  run.py  urls.py
fast_api/todo/templates/: detail.html
fast_api/tutorial/: main.py
fast_api/tutorial/run_command/: start.sh
mlflow_experiments/: .gitignore  Dockerfile.mlflow  docker-compose.yml  mlflow_exp01.py  mlflowserver.py  output.txt  pyproject.toml  set_mlflowserver.py  settings_cuda.sh  start_mlflow.sh  test.sh  test_commandrun.py
