[tool.poetry]
name = "workflow"
version = "0.1.0"
description = ""
authors = ["chibadaimare"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
japanize-matplotlib = "*"
python-language-server = {extras = ["all"], version = "^0.34.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scipy = "^1.5.1"
jupyterlab = "^2.1.5"
mlflow = "^1.11.0"
jupyter = "^1.0.0"
jupytext = "^1.6.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter-nbextensions-configurator = "^0.4.1"
jupyterlab_code_formatter = "^1.3.6"
autopep8 = "^1.5.4"
black = "^20.8b1"
jupyter-lsp = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
